--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,8 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^6.0.1",
+    "joi": "^17.9.1",
+    "joi-objectid": "^4.0.2",
     "jsonwebtoken": "^9.0.0",
     "mongodb": "^5.1.0",
     "mongoose": "^7.0.2",
